Order to DeliveryRequest rename

--- a/02_Solution_split_domain_services/Start/TPaper DeliveryRequest/TPaper.DeliveryRequest/Properties/launchSettings.json
+++ b/02_Solution_split_domain_services/Start/TPaper DeliveryRequest/TPaper.DeliveryRequest/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "TPaper.Orders": {
+    "TPaper.DeliveryRequest": {
       "commandName": "Project",
       "commandLineArgs": "host start --port 7071 --pause-on-error"
     }
